# Fastapi-organizations_handbook

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 00001_initial.py
src/: routes.py
src/config/: project_config.py
src/config/database/: __init__.py  accessor.py  database.py
src/models/: building_model.py  organization_model.py
src/organizations_handbook/controllers/: building_controllers.py  organization_controller.py
src/organizations_handbook/dependencies/: building_dependencies.py  organization_dependencies.py
src/organizations_handbook/exceptions/: organization_exceptions.py
src/organizations_handbook/repositories/: building_repository.py  organization_repository.py
src/organizations_handbook/schemas/: building_schema.py  organization_schema.py
src/organizations_handbook/services/: building_services.py  organization_services.py
